package com.streamcore.videoservice.enums;

public enum Category {
    ACTION,
    COMEDIE,
    DRAME,
    SCIENCE_FICTION,
    THRILLER,
    HORREUR
}
