package com.streamcore.videoservice.enums;

public enum VideoType {
    FILM,
    SERIE
}
